# VKEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ModulesDiagramm.drawio  README.md  RenderDevice.cppm  ShaderFactory.cppm  VKEngine  VKEngine.drawio  Window.cppm  main.cpp  module.modulemap  prebuiltVk.sh
Vulkan/: VkAssembly.cppm  VkColorBlender.cppm  VkDynamicStates.cppm  VkGetter.cppm  VkInstance.cppm  VkLayout.cppm  VkLogicDevice.cppm  VkMultisampling.cppm  VkPhysDevice.cppm  VkPipeline.cppm  VkQueue.cppm  VkRasterizer.cppm  VkShader.cppm  VkSurface.cppm  VkSwapchain.cppm  VkVertexBuffer.cppm  VkViewport.cppm
Vulkan/Helpers/: VkChecker.cppm  VkExtensions.cppm  VkGetter.cppm
assets/shaders/: HardcodeTriangle.vert  simple.glsl
cmakeScripts/: precompile.cmake  precompile3rdparty.cmake  settings.cmake
python/: output.py  precompile.py  syscall.py
src/: AppSettings.cppm  CMakeLists.txt  Event.cppm  NativeWrapper.cppm  RenderDevice.cppm  Resource.cppm  ShaderFactory.cppm  Window.cppm  main.cpp
src/Geometry/: Allocator.cppm  Attributes.cppm  CMakeLists.txt  Geometry.cppm  Quad.cppm  Triangle.cppm
src/Material/: Material.cppm
src/Scene/: CMakeLists.txt  Camera.cppm  CameraControl.cppm  Entity.cppm  Object.cppm  Scene.cppm
src/Vulkan/: CMakeLists.txt  VkAssembly.cppm  VkColorAttachment.cppm  VkColorBlender.cppm  VkCommandBuff.cppm  VkDynamicStates.cppm  VkFence.cppm  VkFrame.cppm  VkFramePool.cppm  VkInstance.cppm  VkLayout.cppm  VkLogicDevice.cppm  VkMultisampling.cppm  VkPhysDevice.cppm  VkPipeline.cppm  VkQueue.cppm  VkQueuePool.cppm  VkRasterizer.cppm  VkRenderPass.cppm  VkSemaphore.cppm  VkShader.cppm  VkSurface.cppm  VkSwapchain.cppm  VkVertexBuffer.cppm
src/Vulkan/Helpers/: VkChecker.cppm  VkExtensions.cppm
src/Vulkan/core/: CMakeLists.txt  VkInstance.cppm  VkLogicDevice.cppm  VkPhysDevice.cppm  VkQueue.cppm  VkQueuePool.cppm
src/Vulkan/frame/: CMakeLists.txt  DepthBuffer.cppm  Texture.cppm  VkCommandBuff.cppm  VkFrame.cppm  VkFramePool.cppm  VkFramebuffer.cppm  VkImage.cppm  VkImageView.cppm  VkSampler.cppm  cmdPool.cppm
src/Vulkan/helpers/: CMakeLists.txt  VkChecker.cppm
src/Vulkan/pipeline/: CMakeLists.txt  PipelineFactory.cppm  VkColorBlender.cppm  VkDescriptorPool.cppm  VkLayout.cppm  VkMemory.cppm  VkMultisampling.cppm  VkPipeline.cppm  VkPipelineCache.cppm  VkRasterizer.cppm  VkRenderPass.cppm  VkVertexBuffer.cppm  VkViewport.cppm  drawData.cppm
